a:hover {   color: red; }

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
       }
 
+      a:hover {
+        color: red;
+      }
+
       body {
         color: #666666;
         background-color: #f9f8f6;
